Fixed the formatting on the original HTML file so everything aligns correctly and it looks very tidy. Fixed navigation bar so it's in the right position and all of the buttons now work correctly. Fixed the formatting on the aforementioned buttons. Removed redundant legacy CSS from the original file. Began work on the title and on the content within so it utilizes the existing CSS.

--- a/css/style1.css
+++ b/css/style1.css
@@ -13,26 +13,27 @@ body {
 #main {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    border-bottom: 5px solid black;
     font-family: Geneva, Arial, sans-serif;
     width: 1100px;
     margin: auto;
     background-color: #DEDEDE;
 }
-.headerstretch {
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    margin-bottom: -5px;
-    width: 1100px;
+#main-title {
+    color: #FFDE7A;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 70px;
+    font-family: monospace;
+    font-size: 4rem;
 }
-
 /* CLASSES FOR DISPLAYING CONTENT */
-.content, .centerarticle {
+.section, .centerarticle {
     border-radius: 4px;
     margin: 35px;
-    padding-left: 20px;
     background-color: #F7F7F7;
     display: block;
-    width: 700px;
+    width: 1005px;
     text-align: left;
     padding: 10px;
     border: 2px solid #ABAAAA;
@@ -93,13 +94,17 @@ body {
 
 
 /* NAVBAR IDS AND CLASSES */
+
 #style {
+    position: absolute;
+    margin: auto;
+    top: 190px;
+    width: 1100px;
     background-color: #171717;
     border-bottom: 2px solid gray;
-    border-top: 2px solid white;
+    border-top: 2px solid gray;
 }
 #style li {
-    text-decoration: none;
     display: inline-block;
     position: relative;
     margin-bottom: 10px;
@@ -107,15 +112,18 @@ body {
     height: 30px;
     color: #FFFFFF;
 }
-
+#style ul {
+    padding-left: 3px;
+    margin-top: 3px;
+    margin-bottom: 0;
+}
 #style a {
     text-align: center;
+    text-decoration: none;
     font-weight: bold;
     padding-top: 10px;
     position: absolute;
     color: white;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -128,48 +136,4 @@ body {
 #style a:hover {
     background-color: white;
     color: black;
-}
-
-.icon {
-    display: inline-block;
-    float: right;
-    margin-top: 4px;
-    padding-right: 10px;
-}
-.icon a:hover {
-    background-color: white;
-    color: black;
-}
-/* EVERYTHING BELOW IS FOOTER IDS */
-#footer {
-    border-top: 2px solid gray;
-    color:white;
-    height: 100px;
-    background-color: #171717;
-}
-
-#wordp,#copy,#right,#val,#valup{
-    position: absolute;
-    margin-left: 15px;
-}
-#val,#valup {
-    margin-left: 1000px;
-}
-#wordp {
-    padding-top: 53px;
-}
-#copy {
-    margin-top: -5px;
-}
-#right {
-    padding-top: 25px;
-}
-#val {
-    padding-top: 43px;
-}
-.valid {
-    border: 0;
-    width: 88px;
-    height: 31px;
-    border-style: none;
 }
